# django-blog

./: .dockerignore  .env  Dockerfile  README.md  docker-compose-stage.yml  docker-compose.yml  prompt.txt  pyproject.toml
.github/workflows/: docker-image.yml
core/: celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  db.sqlite3
core/accounts/: forms.py  tasks.py  urls.py  views.py
core/accounts/api/: utils.py
core/accounts/api/v1/: views.py
core/accounts/migrations/: 0001_initial.py
core/accounts/models/: profiles.py
core/accounts/templates/accounts/: login.html  logout.html  password_change_done.html  profile.html  register.html
core/accounts/tests/: test_forms.py  test_models.py  test_templates.py  test_views.py
core/blog/: admin.py  forms.py  mixins.py  models.py  tasks.py  urls.py  views.py
core/blog/api/v1/: filters.py  serializers.py  urls.py  viewsets.py
core/blog/management/commands/: add_dummy_data.py
core/blog/migrations/: 0001_initial.py  0002_post_read_time_post_views.py  0003_alter_post_category.py
core/blog/templates/: layout.html
core/blog/templates/blog/: category-create.html  home.html  post-form.html  (+4 more)
core/blog/tests/: test_api.py  test_forms.py  test_models.py  test_serializers.py  test_templates.py  test_views.py
core/comment/: admin.py  models.py  tasks.py  urls.py
core/comment/migrations/: 0001_initial.py  0002_remove_comment_author_comment_email_comment_name.py  0003_alter_comment_reply_to.py
core/comment/tests/: test_api.py  test_models.py  test_serializers.py
core/core/: settings.py  urls.py
(+3 files in other folders)
